test/corpus/biexpr.txt
================================================================================
Test binary_simple_expr
================================================================================
1 + 1
--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (number_literal)
    (number_literal)))

================================================================================
Test binary_in_block
================================================================================
{
    1 + 1
}
--------------------------------------------------------------------------------

(source_file
  (record_or_block
    (binary_expression
      (number_literal)
      (number_literal))))

================================================================================
Test let-env
================================================================================
let-env a = 1 # Output should contain binary expr, but hey
--------------------------------------------------------------------------------

(source_file
  (command
    (identifier)
    (identifier)
    (word)
    (number_literal)
    (comment)))
